fixed overflow scroll in contacts

--- a/templates/media/css/dashboard.css
+++ b/templates/media/css/dashboard.css
@@ -389,6 +389,7 @@
 
 #contacts-box {
     height: 400px;
+    overflow: scroll;
 }
 
 /*Profile Left*/
